--- a/style.css
+++ b/style.css
@@ -56,7 +56,19 @@ a:hover
   width: 500px;
   margin: 20px auto;
 }
-
+/**********SIDE BAR*********/
+#sidebar
+{
+  position: fixed;
+  width: 300px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+#page-content
+{
+  margin-left: 300px;
+}
 /***********PRESENTATION***********/
 #photo_profile
 {
