--- a/style.css
+++ b/style.css
@@ -65,10 +65,16 @@ a:hover
   top: 0;
   bottom: 0;
   background-color: #394249;
+  text-align: center;
 }
 #page-content
 {
   margin-left: 300px;
+}
+#sidebar a i
+{
+  display: block;
+  padding: 20px;
 }
 /***********PRESENTATION***********/
 #photo_profile
